66 - fixed city image to stretch to fit diff sizes (EN)

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -47,7 +47,7 @@ div.choices
   background-image: image-url("city.jpg")
   background-repeat: no-repeat
   background-position: center center
-  background-size: 100%
+  background-size: cover
   height: 395px
   background-color: #000
 
